fix(storybook): Fix input description contrast Card: https://app.clickup.com/t/85zrrdntb

--- a/src/styles/globals/form/_input-description.css
+++ b/src/styles/globals/form/_input-description.css
@@ -2,7 +2,7 @@
     --input-description-order: 10;
     --input-description-margin: var(--spacing-s) 0 0;
     --input-description-padding: 0 var(--spacing-xs);
-    --input-description-color: var(--color-font-light);
+    --input-description-color: var(--color-font);
     --input-description-font-family: var(--font-family-text);
     --input-description-font-size: var(--font-size-s);
     --input-description-font-weight: var(--font-weight-text-normal);
